--- a/app/views/movie/_search_form.erb
+++ b/app/views/movie/_search_form.erb
@@ -3,6 +3,6 @@
   <input class="input-xlarge" type="search" name="q" autofocus=""
          placeholder="Enter a movie title">
 
-  <button name="button" value="search">Search</button>
-  <button name="button" value="lucky">I'm Feeling Lucky!</button>
+  <button class="btn" name="button" value="search">Search</button>
+  <!--<button name="button" value="lucky">I'm Feeling Lucky!</button>-->
 </form>
