began styling home page and detail section

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
       <h1 id = "logo">Flick Picks</h1>
       <%= render "search_form.erb" %>
     </div>
-    <div id = "main"
+    <div id = "main">
       <%= yield %>
     </div>
   </div>
