--- a/app/views/movie/_search_form.erb
+++ b/app/views/movie/_search_form.erb
@@ -1,8 +1,11 @@
-<form action="/search" method="get">
 
-  <input class="input-xlarge" type="search" name="q" autofocus=""
+<div id = "search_form">
+<form action="/search" method="get">
+  <!--`q` says what search will look like search?q=input -->
+  <input class="input-xlarge" type="text" name="q" autofocus=""
          placeholder="Enter a movie title">
 
-  <button class="btn" name="button" value="search">Search</button>
+  <button class="button" name="button" value="search">Search</button>
   <!--<button name="button" value="lucky">I'm Feeling Lucky!</button>-->
 </form>
+</div>
