--- a/app/assets/stylesheets/movie.css.scss
+++ b/app/assets/stylesheets/movie.css.scss
@@ -1,9 +1,53 @@
 // Place all the styles related to the movie controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
 body {
+  padding: 0;
   display: block;
-  margin: -60px 0 0 0;
+  margin: 0;
+  font-family: 'Noto Sans', sans-serif;
+}
+
+h1 {
+  margin: 0;
+}
+
+h2 {
+  margin: 0;
+}
+
+li {
+  margin: auto;
+  display: block; 
+}
+
+img {
+  float: right;
+  width: 30%;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+#search_form input {
+  padding: 0;
+  border: none;
+  width: 350px;
+  font-size: 1.5em;
+  line-height: 1.5em;
+  background-color: #EBEBEC;
+  font-family: 'Noto Sans', sans-serif;
+}
+
+#search_form .button {
+  padding: 0 5px 0 5px;
+  border: none;
+  font-size: 1.5em;
+  line-height: 1.5em;
+  background-color: white;
   font-family: 'Noto Sans', sans-serif;
 }
 
@@ -12,11 +56,15 @@ body {
   background-color: white;
 }
 
+.movie_info {
+  margin-bottom: 100px;
+  float: left;
+  width: 50%;
+}
+
 #header {
   width: 100%;
-  text-align: left;
-  margin: auto;
-  height: 150px;
+  height: 200px;
   background-color: black;
   position: relative;
   color: white;
@@ -29,10 +77,13 @@ body {
 }
 
 #main {
-  padding: 100px;
-  margin: 0 auto;
+  padding: 100px 200px 100px 200px;
+  margin: auto;
 }
 
 .ol {
-	line-height: 2em;
+  line-height: 2em;
+  margin-left: 20%;
+  margin-right: 20%;
 }
+
